# Valkyrie-Engine

./: .gitignore  CMakeLists.txt  Valkyrie.cpp  Valkyrie.h
engine/: CMakeLists.txt
engine/include/engine/: Application.h  Engine.h
engine/include/engine/platform/: Window.h
engine/src/core/: Application.cpp  Application.h  Engine.cpp
engine/src/platform/windows/: WindowsWindow.cpp
game/: CMakeLists.txt
game/src/: main.cpp
